--- a/src/ManiaVersionSelector/App.xaml
+++ b/src/ManiaVersionSelector/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ManiaVersionSelector"
-             Startup="ApplicationStartup">
+             Startup="ApplicationStartup" DispatcherUnhandledException="ApplicationDispatcherUnhandledException">
     <!-- StartupUri="MainWindow.xaml"-->
     <Application.Resources>
          
