--- a/src/ManiaVersionSelector/ConfigurationEditorWindow.xaml
+++ b/src/ManiaVersionSelector/ConfigurationEditorWindow.xaml
@@ -4,18 +4,68 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ManiaVersionSelector"
+        xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
         mc:Ignorable="d"
         Title="ManiaVersionSelector Configuration" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Padding="10 2" Margin="2 2 0 2">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Grid.Row="0">
+            <Button x:Name="AddItemButton" Content="Add entry" Padding="10 4" Margin="2" Click="AddItemButtonClick" />
+            <Button x:Name="RemoveItemButton" Content="Remove selected entry" Padding="10 4" Margin="2" Click="RemoveItemButtonClick" />
+        </StackPanel>
+        <ListBox x:Name="VersionList" ItemsSource="{Binding Configuration.Versions}" SelectedItem="{Binding SelectedVersion}" BorderThickness="0" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel IsItemsHost="True" Height="Auto" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                </Style>
+            </ListBox.ItemContainerStyle>
+            <ListBox.ItemTemplate>
+                <DataTemplate DataType="local:VersionEntry">
+                    <Grid Height="Auto" Margin="2 4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Width="32" Height="32" Source="{Binding Icon}" Margin="2" />
+                        <Grid Grid.Column="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                                <!--<ColumnDefinition Width="Auto" />-->
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Column="0" Grid.Row="0" Text="Name:" VerticalAlignment="Center" Padding="4" />
+                            <TextBox Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Text="{Binding Name}" VerticalAlignment="Center" Padding="4" Margin="2" HorizontalAlignment="Stretch" />
+                            <TextBlock Grid.Column="0" Grid.Row="1" Text="Path:" VerticalAlignment="Center" Padding="4" />
+                            <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path}" VerticalAlignment="Center" Padding="4" Margin="2" HorizontalAlignment="Stretch" />
+                            <Button Grid.Column="2" Grid.Row="1" Content="..." x:Name="BrowseExecutablePathButton" Padding="6 4" Margin="2" Command="{Binding BrowsePathCommand}" />
+                            <!--<Button Grid.Column="3" Grid.Row="0" Content="x" x:Name="RemoveButton" Padding="6 4" Margin="2" />-->
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="2">
+            <Button Padding="10 4" Margin="2 2 10 2" Click="PreviewButtonClick">
+                <TextBlock Text="Preview" />
+            </Button>
+            <Button Padding="10 4" Margin="2" Click="OkButtonClick">
                 <TextBlock Text="OK" />
             </Button>
-            <Button Padding="10 2" Margin="2">
+            <Button Padding="10 4" Margin="2" Click="CancelButtonClick" >
                 <TextBlock Text="Cancel" />
             </Button>
         </StackPanel>
